# GenAI_Finetuning

./: README.md  data_preprocessing.ipynb  finetune_herbert_lora.py  model_from_scratch.py  pyproject.toml
