[project]
name = "lo-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "peft>=0.18.0",
    "protobuf>=6.33.2",
    "pyarrow>=22.0.0",
    "sacremoses>=0.1.1",
    "sentencepiece>=0.2.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]
